# pico-w-peripheral-bt-manifest

./: README.md  west.yml
pico_w_peripheral_bt/: CMakeLists.txt  Kconfig  README.md  build.ps1  journal.md  prj.conf  setup-env.ps1
pico_w_peripheral_bt/boards/: rpi_pico_rp2040_w.overlay
pico_w_peripheral_bt/src/: app_api.c  app_api.h  main.c
pico_w_peripheral_bt/src/ble/: ble_core.c  ble_core.h  ble_mgr.c  ble_mgr.h  ble_service.c  ble_service.h  cts_svc.c  cts_svc.h  ias_svc.c  ias_svc.h  pill_svc.c  pill_svc.h
pico_w_peripheral_bt/src/ble/services/cts/: cts_svc.c  cts_svc.h
pico_w_peripheral_bt/src/ble/services/ias/: ias_svc.c  ias_svc.h
pico_w_peripheral_bt/src/ble/services/pill/: pill_svc.c  pill_svc.h
pico_w_peripheral_bt/src/pill/: README.md  pill.h
pico_w_peripheral_bt/src/pill/alarm/: alarm_ctrl.c  alarm_model.c  alarm_scheduler.c
pico_w_peripheral_bt/src/pill/hw/: battery_adc.c  display.c  leds.c  pill_hw.c
pico_w_peripheral_bt/src/pill/include/pill/: alarm_ctrl.h  alarm_model.h  alarm_scheduler.h  app_settings.h  battery_adc.h  ble_validation.h  display.h  leds.h  pill_hw.h
pico_w_peripheral_bt/src/pill/services/: app_settings.c  ble_validation.c
